package de.hsbi.lockgame.model;

public enum CellType {
    EMPTY,
    WALL,
    PIN_SLOT
}
